[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lanhack"
version = "0.1.0"
description = "LAN manipulation toolkit with TUI"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "textual>=1.0.0",
    "mitmproxy>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
